2016-03-04  Yvan Roux  <yvan.roux@linaro.org>

	* lib/remote.exp (standard_upload): Remove dead code.

2016-02-24  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (prune): Restore this proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-02-23  Iain Buclaw  <ibuclaw@gdcproject.org>

	* lib/libgloss.exp (find_gdc): New proc.
	* lib/target.exp (default_target_compile): Add D support.
	* NEWS: Update.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (diff): Replace calls to verbose followed by
	send_log with a single call to verbose -log. Remove additional
	newlines from the log messages.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (getdirs): Ignore .git and .svn directories.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp: Improve comments.
	* NEWS: Update.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (prune): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (slay): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (absolute): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (psource): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.

2016-02-20  Ben Elliston  <bje@gnu.org>

	* lib/targetdb.exp (board_info): Simplify return logic.

2016-02-19  Ben Elliston  <bje@gnu.org>

	* configure.ac: Require Tcl version 8.5 at a minimum.
	* configure: Regenerate.

2016-02-18  Ben Elliston  <bje@gnu.org>

	* configure.ac: Require Tcl version 8.6 at a minimum.
	* configure: Regenerate.

2016-02-17  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Tweak "Test run by .." output.

2016-02-17  Ben Elliston  <bje@gnu.org>

	* lib/target.exp (default_target_compile): Do not pass -log to