@@ -1,3 +1,7 @@
+2016-03-05  Yvan Roux  <yvan.roux@linaro.org>
+
+	* lib/remote.exp (remote_exec): Restore original timeout value.
+
 2016-03-04  Yvan Roux  <yvan.roux@linaro.org>
 
 	* lib/remote.exp (standard_upload): Remove dead code.
